# Lean4Evaluation

./: .env.example  .gitignore  README.md  claude-progress.txt  feature_list.json  init.sh  pyproject.toml  task.md  task_update.md
benchmarks/MiniF2F/: MiniF2F-test-examples.jsonl
prompts/: init.txt  spec.txt  task1_judge.txt  task1_translate.txt  task2_prove.txt
scripts/: run_task1.py  run_task2.py
src/: lean_runner_api.py
src/core/: client.py  config.py  utils.py
src/tasks/: task1.py  task2.py
